<resources>
    <string name="app_name">Italian</string>
    <string name="action_pizza">Pizza</string>
    <string name="action_salads">Salads</string>
    <string name="action_appetizers">Appetizers</string>
    <string name="action_pastas">Pastas</string>
    <string name="action_calzones">Calzones</string>
    <string name="action_sandwiches">Sandwiches</string>
    <string name="action_deserts">Deserts</string>
    <string name="action_order">Order</string>
    <string name="fat">Fat</string>
    <string name="saturatedFat">Saturated Fat</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sugars">Sugar</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="order_ADD">ADD</string>
    <string name="order_NO">NO</string>
    <string name="order_CRUST">CRUST</string>
    <string name="order_STUFFING">STUFFING</string>
    <string name="order_TOPPINGS">TOPPINGS</string>
    <string name="order_SIZE">SIZE</string>
    <string name="pizza_right">Right</string>
    <string name="pizza_left">Left</string>
    <string name="checkout">Checkout</string>
    <string name="clear_list">Clear List</string>
    <string name="place_holder">Placeholder</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="comment">Comment</string>
    <string name="half">1/2</string>
    <string name="order">Order</string>
    <string name="location_information">Location Information</string>
    <string name="show_map">Show Map</string>


</resources>