<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:id="@+id/nutrition_information">

    <TextView
        style="@style/nutritionInfo"
        android:text="@string/calories"
        android:id="@+id/hardCalories"
        app:layout_constraintRight_toLeftOf="@+id/hardProtein"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/hardProtein" />


    <TextView
        android:id="@+id/calories"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardCalories"
        app:layout_constraintRight_toLeftOf="@+id/hardCalories"
        app:layout_constraintTop_toBottomOf="@+id/hardCalories" />

    <TextView
        android:id="@+id/fat"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardFat"
        app:layout_constraintRight_toLeftOf="@+id/hardFat"
        app:layout_constraintTop_toBottomOf="@+id/hardFat" />

    <TextView
        android:id="@+id/saturatedFat"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardSaturatedFat"
        app:layout_constraintRight_toLeftOf="@+id/hardSaturatedFat"
        app:layout_constraintTop_toBottomOf="@+id/hardSaturatedFat" />

    <TextView
        android:id="@+id/sodium"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardSodium"
        app:layout_constraintRight_toLeftOf="@+id/hardSodium"
        app:layout_constraintTop_toBottomOf="@+id/hardSodium" />

    <TextView
        android:id="@+id/sugars"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardSugar"
        app:layout_constraintRight_toLeftOf="@+id/hardSugar"
        app:layout_constraintTop_toBottomOf="@+id/hardSugar" />

    <TextView
        android:id="@+id/protein"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardProtein"
        app:layout_constraintRight_toLeftOf="@+id/hardProtein"
        app:layout_constraintTop_toBottomOf="@+id/hardProtein" />

    <TextView
        android:id="@+id/carbohydrates"
        style="@style/nutritionData"
        android:alpha="0"
        app:layout_constraintLeft_toRightOf="@+id/hardCarbohydrates"
        app:layout_constraintRight_toLeftOf="@+id/hardCarbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/hardCarbohydrates" />




    <TextView
        style="@style/nutritionInfo"
        android:text="@string/fat"
        android:id="@+id/hardFat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="25dp" />


    <TextView
        style="@style/nutritionInfo"
        android:text="@string/saturatedFat"
        android:id="@+id/hardSaturatedFat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/hardProtein"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/hardProtein" />


    <TextView
        style="@style/nutritionInfo"
        android:text="@string/sodium"
        android:id="@+id/hardSodium"
        app:layout_constraintLeft_toRightOf="@+id/hardProtein"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/hardProtein" />


    <TextView
        style="@style/nutritionInfo"
        android:text="@string/sugars"
        android:id="@+id/hardSugar"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="25dp" />


    <TextView
        style="@style/nutritionInfo"
        android:text="@string/protein"
        android:id="@+id/hardProtein"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView" />


    <TextView
        style="@style/nutritionInfo"
        android:text="@string/carbohydrates"
        android:id="@+id/hardCarbohydrates"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hardProtein"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/hardProtein" />


    <TextView
        style="@style/Header"
        android:id="@+id/map_title"
        android:text="@string/place_holder"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/place_holder"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="149dp"
        android:src="@drawable/appblasters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nutrition_order_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>